Chore: Update test repo
Signed-off-by: Matthew Watkins <mwatkins@linuxfoundation.org>

--- a/.github/workflows/nexus-iq.yaml
+++ b/.github/workflows/nexus-iq.yaml
@@ -34,6 +34,7 @@ jobs:
 
       - name: "Checkout repository if source is GitHub"
         if: inputs.location == 'github'
+        uses: actions/checkout@v4
 
       - name: "Build Node.js project"
         uses: ModeSevenIndustrialSolutions/portal-ng-ui/.github/actions/node-build@master
