--- a/.github/workflows/gerrit-verify-direct.yaml
+++ b/.github/workflows/gerrit-verify-direct.yaml
@@ -2,7 +2,7 @@
 # SPDX-License-Identifier: Apache-2.0
 # SPDX-FileCopyrightText: 2024 The Linux Foundation <https://linuxfoundation.org>
 
-name: 'Nexus IQ Scan [DIRECT]'
+name: 'gerrit-verify-direct.yaml [MANUALLY INVOKED]'
 
 # yamllint disable-line rule:truthy
 on:
