--- a/.github/workflows/gerrit-verify.yaml
+++ b/.github/workflows/gerrit-verify.yaml
@@ -2,7 +2,7 @@
 # SPDX-License-Identifier: Apache-2.0
 # SPDX-FileCopyrightText: 2024 The Linux Foundation <https://linuxfoundation.org>
 
-name: 'Nexus IQ Scan [VERIFY]'
+name: 'gerrit-verify.yaml [PRODUCTION WORKFLOW]'
 
 # yamllint disable-line rule:truthy
 on:
