--- a/.github/workflows/node-nexus-iq.yaml
+++ b/.github/workflows/node-nexus-iq.yaml
@@ -2,7 +2,7 @@
 # SPDX-License-Identifier: Apache-2.0
 # SPDX-FileCopyrightText: 2024 The Linux Foundation <https://linuxfoundation.org>
 
-name: 'Node Nexus IQ Scan [REUSABLE]'
+name: 'node-nexus-iq.yaml [REUSABLE]'
 
 # yamllint disable-line rule:truthy
 on:
