Chore: Update test repo
Signed-off-by: Matthew Watkins <mwatkins@linuxfoundation.org>

--- a/.github/workflows/gerrit-verify.yaml
+++ b/.github/workflows/gerrit-verify.yaml
@@ -8,6 +8,9 @@ name: 'gerrit-verify.yaml [PRODUCTION]'
 on:
   workflow_dispatch:
     inputs:
+
+      # Careful, a workflow can only accept ten inputs at the top level
+
       GERRIT_BRANCH:
         description: 'Branch that change is against'
         required: true
@@ -51,52 +54,64 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  #prepare:
-  #  runs-on: ubuntu-latest
-  #  steps:
-  #    - name: Clear votes
-  #      if: inputs.source-origin == 'gerrit'
-  #      # yamllint disable-line rule:line-length
-  #      uses: lfit/gerrit-review-action@7c30179c3c9389545fccb0d458df59879372ae6a # v0.6
-  #      with:
-  #        username: ${{ vars.GERRIT_SSH_USER }}
-  #        host: ${{ vars.GERRIT_SERVER }}
-  #        key: ${{ secrets.GERRIT_SSH_PRIVKEY }}
-  #        known_hosts: ${{ vars.GERRIT_KNOWN_HOSTS }}
-  #        gerrit-change-number: ${{ inputs.GERRIT_CHANGE_NUMBER }}
-  #        gerrit-patchset-number: ${{ inputs.GERRIT_PATCHSET_NUMBER }}
-  #        vote-type: clear
-  #        comment-only: true
-  #    - name: Allow replication to GitHub
-  #      run: sleep 10s
+  prepare:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Clear votes
+        if: ${{ vars.REPO_ORIGIN }} != 'github'
+        # yamllint disable-line rule:line-length
+        uses: lfit/gerrit-review-action@7c30179c3c9389545fccb0d458df59879372ae6a # v0.6
+        with:
+          username: ${{ vars.GERRIT_SSH_USER }}
+          host: ${{ vars.GERRIT_SERVER }}
+          key: ${{ secrets.GERRIT_SSH_PRIVKEY }}
+          known_hosts: ${{ vars.GERRIT_KNOWN_HOSTS }}
+          gerrit-change-number: ${{ inputs.GERRIT_CHANGE_NUMBER }}
+          gerrit-patchset-number: ${{ inputs.GERRIT_PATCHSET_NUMBER }}
+          vote-type: clear
+          comment-only: true
+      - name: Allow replication to GitHub
+        run: sleep 10s
 
-  node-verify-clm:
-    #needs: [prepare]
+  # Only runs when master repository is in Gerrit
+  gerrit-node-verify-clm:
     uses: ModeSevenIndustrialSolutions/portal-ng-ui/.github/workflows/node-nexus-iq.yaml@master
+    if: ${{ vars.REPO_ORIGIN }} != 'github'
+    needs: [prepare]
     with:
       node-version: 20
       build-tool: npm
     secrets:
       NEXUS_IQ_PASSWORD: ${{ secrets.NEXUS_IQ_PASSWORD }}
 
-  #vote:
-  #  if: inputs.source-origin == 'gerrit'
-  #  needs: [prepare, node-verify-clm]
-  #  runs-on: ubuntu-latest
-  #  # yamllint enable rule:line-length
-  #  steps:
-  #    - name: 'Get conclusion'
-  #      # yamllint disable-line rule:line-length
-  #      uses: technote-space/workflow-conclusion-action@45ce8e0eb155657ab8ccf346ade734257fd196a5 # v3.0.3
-  #    - name: 'Set vote'
-  #      # yamllint disable-line rule:line-length
-  #      uses: lfit/gerrit-review-action@7c30179c3c9389545fccb0d458df59879372ae6a # v0.6
-  #      with:
-  #        host: ${{ vars.GERRIT_SERVER }}
-  #        username: ${{ vars.GERRIT_SSH_USER }}
-  #        key: ${{ secrets.GERRIT_SSH_PRIVKEY }}
-  #        known_hosts: ${{ vars.GERRIT_KNOWN_HOSTS }}
-  #        gerrit-change-number: ${{ inputs.GERRIT_CHANGE_NUMBER }}
-  #        gerrit-patchset-number: ${{ inputs.GERRIT_PATCHSET_NUMBER }}
-  #        vote-type: ${{ env.WORKFLOW_CONCLUSION }}
-  #        comment-only: true
+  # Only runs when master repository is in Gerrit
+  github-node-verify-clm:
+    uses: ModeSevenIndustrialSolutions/portal-ng-ui/.github/workflows/node-nexus-iq.yaml@master
+    if: ${{ vars.REPO_ORIGIN }} == 'github'
+    with:
+      node-version: 20
+      build-tool: npm
+    secrets:
+      NEXUS_IQ_PASSWORD: ${{ secrets.NEXUS_IQ_PASSWORD }}
+
+  vote:
+    if: ${{ vars.REPO_ORIGIN }} != 'github'
+    needs: [prepare, gerrit-node-verify-clm]
+    runs-on: ubuntu-latest
+    # yamllint enable rule:line-length
+    steps:
+      - name: 'Get conclusion'
+        # yamllint disable-line rule:line-length
+        uses: technote-space/workflow-conclusion-action@45ce8e0eb155657ab8ccf346ade734257fd196a5 # v3.0.3
+      - name: 'Set vote'
+        # yamllint disable-line rule:line-length
+        uses: lfit/gerrit-review-action@7c30179c3c9389545fccb0d458df59879372ae6a # v0.6
+        with:
+          host: ${{ vars.GERRIT_SERVER }}
+          username: ${{ vars.GERRIT_SSH_USER }}
+          key: ${{ secrets.GERRIT_SSH_PRIVKEY }}
+          known_hosts: ${{ vars.GERRIT_KNOWN_HOSTS }}
+          gerrit-change-number: ${{ inputs.GERRIT_CHANGE_NUMBER }}
+          gerrit-patchset-number: ${{ inputs.GERRIT_PATCHSET_NUMBER }}
+          vote-type: ${{ env.WORKFLOW_CONCLUSION }}
+          comment-only: true
