--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "13.3.10",
-    "@angular/cdk": "13.3.8",
+    "@angular/cdk": "13.3.9",
     "@angular/common": "13.3.10",
     "@angular/compiler": "13.3.10",
     "@angular/core": "13.3.10",
@@ -32,26 +32,25 @@
     "@angular/platform-browser-dynamic": "13.3.10",
     "@angular/router": "13.3.10",
     "@ng-bootstrap/ng-bootstrap": "12.1.2",
-    "@ngx-translate/core": "13.0.0",
-    "@ngx-translate/http-loader": "6.0.0",
+    "@ngx-translate/core": "14.0.0",
+    "@ngx-translate/http-loader": "7.0.0",
     "@popperjs/core": "2.11.5",
-    "angular-oauth2-oidc": "12.1.0",
+    "angular-oauth2-oidc": "13.0.1",
     "bootstrap": "5.1.3",
     "license-report": "5.0.2",
     "lodash": "4.17.21",
-    "ng-bootstrap": "1.6.3",
-    "rxjs": "6.6.7",
-    "tslib": "2.2.0",
+    "rxjs": "~7.4.0",
+    "tslib": "2.3.0",
     "zone.js": "0.11.5"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "13.3.7",
-    "@angular-eslint/builder": "13.2.1",
-    "@angular-eslint/eslint-plugin": "13.2.1",
-    "@angular-eslint/eslint-plugin-template": "13.2.1",
-    "@angular-eslint/schematics": "13.2.1",
-    "@angular-eslint/template-parser": "13.2.1",
-    "@angular/cli": "13.3.7",
+    "@angular-devkit/build-angular": "13.3.10",
+    "@angular-eslint/builder": "13.5.0",
+    "@angular-eslint/eslint-plugin": "13.5.0",
+    "@angular-eslint/eslint-plugin-template": "13.5.0",
+    "@angular-eslint/schematics": "13.5.0",
+    "@angular-eslint/template-parser": "13.5.0",
+    "@angular/cli": "13.3.10",
     "@angular/compiler-cli": "13.3.10",
     "@openapitools/openapi-generator-cli": "^2.6.0",
     "@types/jasmine": "~3.6.0",
