--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "openapi": "npx openapi-generator-cli generate --generator-key v3.0",
     "ng": "./node-modules/.bin/ng",
     "prestart": "npm run openapi",
-    "start": "ng serve -- --proxy-config staging.proxy.config.json --host 0.0.0.0 --port 80 --disable-host-check",
+    "start": "ng serve --proxy-config staging.proxy.config.json --host 0.0.0.0 --port 80 --disable-host-check",
     "prebuild": "npm run openapi",
     "build": "ng build",
     "pretest": "npm run openapi",
@@ -21,22 +21,22 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "13.3.10",
+    "@angular/animations": "14.3.0",
     "@angular/cdk": "13.3.9",
-    "@angular/common": "13.3.10",
-    "@angular/compiler": "13.3.10",
-    "@angular/core": "13.3.10",
-    "@angular/forms": "13.3.10",
-    "@angular/localize": "13.3.10",
-    "@angular/platform-browser": "13.3.10",
-    "@angular/platform-browser-dynamic": "13.3.10",
-    "@angular/router": "13.3.10",
-    "@ng-bootstrap/ng-bootstrap": "12.1.2",
+    "@angular/common": "14.3.0",
+    "@angular/compiler": "14.3.0",
+    "@angular/core": "14.3.0",
+    "@angular/forms": "14.3.0",
+    "@angular/localize": "14.3.0",
+    "@angular/platform-browser": "14.3.0",
+    "@angular/platform-browser-dynamic": "14.3.0",
+    "@angular/router": "14.3.0",
+    "@ng-bootstrap/ng-bootstrap": "13.1.1",
     "@ngx-translate/core": "14.0.0",
     "@ngx-translate/http-loader": "7.0.0",
     "@popperjs/core": "2.11.5",
-    "angular-oauth2-oidc": "13.0.1",
-    "bootstrap": "5.1.3",
+    "angular-oauth2-oidc": "14.0.1",
+    "bootstrap": "5.2.0",
     "license-report": "5.0.2",
     "lodash": "4.17.21",
     "rxjs": "~7.4.0",
@@ -44,23 +44,23 @@
     "zone.js": "0.11.5"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "13.3.10",
-    "@angular-eslint/builder": "13.5.0",
-    "@angular-eslint/eslint-plugin": "13.5.0",
-    "@angular-eslint/eslint-plugin-template": "13.5.0",
-    "@angular-eslint/schematics": "13.5.0",
-    "@angular-eslint/template-parser": "13.5.0",
-    "@angular/cli": "13.3.10",
-    "@angular/compiler-cli": "13.3.10",
+    "@angular-devkit/build-angular": "14.2.13",
+    "@angular-eslint/builder": "14.4.0",
+    "@angular-eslint/eslint-plugin": "14.4.0",
+    "@angular-eslint/eslint-plugin-template": "14.4.0",
+    "@angular-eslint/schematics": "14.4.0",
+    "@angular-eslint/template-parser": "14.4.0",
+    "@angular/cli": "14.2.13",
+    "@angular/compiler-cli": "14.3.0",
     "@openapitools/openapi-generator-cli": "^2.6.0",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "2.0.3",
     "@types/lodash": "4.14.188",
-    "@types/node": "16.0.0",
+    "@types/node": "18.0.0",
     "@types/uuid": "^8.3.4",
-    "@typescript-eslint/eslint-plugin": "5.17.0",
-    "@typescript-eslint/parser": "5.17.0",
-    "eslint": "7.32.0",
+    "@typescript-eslint/eslint-plugin": "^5.36.2",
+    "@typescript-eslint/parser": "^5.36.2",
+    "eslint": "^8.23.0",
     "git-format-staged": "3.0.0",
     "husky": "8.0.1",
     "jasmine-core": "~4.0.0",
@@ -80,8 +80,8 @@
     "prettier": "2.6.2",
     "protractor": "7.0.0",
     "sonar-scanner": "3.1.0",
-    "ts-node": "10.0.0",
-    "typescript": "4.6.4"
+    "ts-node": "10.9.0",
+    "typescript": "~4.8.0"
   },
   "husky": {
     "hooks": {
