--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,15 +14,18 @@
     "module": "es2020",
     "moduleResolution": "node",
     "importHelpers": true,
-    "target": "es2020",
-    "lib": ["es2020", "dom"],
+    "target": "ES2022",
+    "lib": [
+      "es2020",
+      "dom"
+    ],
     "resolveJsonModule": true,
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "useDefineForClassFields": false
   },
   "angularCompilerOptions": {
     "strictInjectionParameters": true,
     "strictTemplates": true,
-    "fullTemplateTypeCheck": true,
-    "enableIvy": true
+    "fullTemplateTypeCheck": true
   }
 }
