--- a/package.json
+++ b/package.json
@@ -21,46 +21,46 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "15.2.10",
-    "@angular/cdk": "14.2.7",
-    "@angular/common": "15.2.10",
-    "@angular/compiler": "15.2.10",
-    "@angular/core": "15.2.10",
-    "@angular/forms": "15.2.10",
-    "@angular/localize": "15.2.10",
-    "@angular/platform-browser": "15.2.10",
-    "@angular/platform-browser-dynamic": "15.2.10",
-    "@angular/router": "15.2.10",
-    "@ng-bootstrap/ng-bootstrap": "14.2.0",
+    "@angular/animations": "16.2.12",
+    "@angular/cdk": "16.2.14",
+    "@angular/common": "16.2.12",
+    "@angular/compiler": "16.2.12",
+    "@angular/core": "16.2.12",
+    "@angular/forms": "16.2.12",
+    "@angular/localize": "16.2.12",
+    "@angular/platform-browser": "16.2.12",
+    "@angular/platform-browser-dynamic": "16.2.12",
+    "@angular/router": "16.2.12",
+    "@ng-bootstrap/ng-bootstrap": "15.1.2",
     "@ngx-translate/core": "14.0.0",
     "@ngx-translate/http-loader": "7.0.0",
     "@popperjs/core": "^2.11.6",
-    "angular-oauth2-oidc": "14.0.1",
+    "angular-oauth2-oidc": "^16.0.0",
     "bootstrap": "5.2.3",
     "license-report": "5.0.2",
     "lodash": "4.17.21",
     "rxjs": "~7.4.0",
     "tslib": "2.3.0",
-    "zone.js": "0.11.5"
+    "zone.js": "0.13.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "15.2.11",
-    "@angular-eslint/builder": "15.2.1",
-    "@angular-eslint/eslint-plugin": "15.2.1",
-    "@angular-eslint/eslint-plugin-template": "15.2.1",
-    "@angular-eslint/schematics": "15.2.1",
-    "@angular-eslint/template-parser": "15.2.1",
-    "@angular/cli": "15.2.11",
-    "@angular/compiler-cli": "15.2.10",
+    "@angular-devkit/build-angular": "16.2.16",
+    "@angular-eslint/builder": "16.3.1",
+    "@angular-eslint/eslint-plugin": "16.3.1",
+    "@angular-eslint/eslint-plugin-template": "16.3.1",
+    "@angular-eslint/schematics": "16.3.1",
+    "@angular-eslint/template-parser": "16.3.1",
+    "@angular/cli": "16.2.16",
+    "@angular/compiler-cli": "16.2.12",
     "@openapitools/openapi-generator-cli": "^2.6.0",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "2.0.3",
     "@types/lodash": "4.14.188",
     "@types/node": "18.0.0",
     "@types/uuid": "^8.3.4",
-    "@typescript-eslint/eslint-plugin": "^5.43.0",
-    "@typescript-eslint/parser": "^5.43.0",
-    "eslint": "^8.28.0",
+    "@typescript-eslint/eslint-plugin": "^5.59.2",
+    "@typescript-eslint/parser": "^5.59.2",
+    "eslint": "^8.39.0",
     "git-format-staged": "3.0.0",
     "husky": "8.0.1",
     "jasmine-core": "~4.0.0",
@@ -81,7 +81,7 @@
     "protractor": "7.0.0",
     "sonar-scanner": "3.1.0",
     "ts-node": "10.9.0",
-    "typescript": "~4.8.0"
+    "typescript": "~4.9.3"
   },
   "husky": {
     "hooks": {
