Chore: Align new node build action with existing actions
Import endpoint.sh update with upstream iq-github-action PR

Signed-off-by: Matthew Watkins <mwatkins@linuxfoundation.org>

--- a/.github/actions/iq-github-action/action.yml
+++ b/.github/actions/iq-github-action/action.yml
@@ -1,4 +1,4 @@
-name: 'Sonatype Lifecycle Scan'
+name: 'Sonatype Lifecycle GitHub Action'
 author: 'Sonatype Community'
 description: 'Run a Sonatype Lifecycle policy evaluation as part of your GitHub Actions workflow.'
 inputs:
