--- a/.github/workflows/node-sonatype-lifecycle.yaml
+++ b/.github/workflows/node-sonatype-lifecycle.yaml
@@ -47,24 +47,17 @@ jobs:
           build-tool: ${{ inputs.build-tool }}
 
       - name: "Sonatype Lifecycle Scan"
-        # Somebody has set continue-on-error in the RelEng Reusable Workflows Repository
-        # continue-on-error: true
-        # Why?!?!?
-        # yamllint disable-line rule:line-length
+        # Note: Somebody has set continue-on-error in the RelEng Reusable Workflows Repository
         # See: https://github.com/lfit/releng-reusable-workflows/blob/main/.github/workflows/composed-gradle-nexus-iq.yaml
-        # yamllint disable-line rule:line-length
         # See: https://github.com/lfit/releng-reusable-workflows/blob/main/.github/workflows/composed-maven-nexus-iq.yaml
-        # This has an issue with the shebang directive:
-        # uses: sonatype-nexus-community/iq-github-action@main
-        # See: https://github.com/onap/portal-ng-ui/actions/runs/10527123076/job/29169584344
-        # e.g. /entrypoint.sh: 18: [[: not found
         uses: ModeSevenIndustrialSolutions/portal-ng-ui/.github/actions/iq-github-action@master
         with:
           serverUrl: ${{ vars.NEXUS_IQ_SERVER }}
           username: ${{ vars.NEXUS_IQ_USERNAME }}
           password: ${{ secrets.NEXUS_IQ_PASSWORD }}
-          # Temporarily force to ONAP because testing in ModeSevenIndustrialSolutions
+          # Temporarily force to ONAP ORG because currently testing in ModeSevenIndustrialSolutions
           applicationId: onap-${{ github.event.repository.name }}
+          # Restore the line below when ready to merge back into production repository
           # applicationId: ${{ github.repository_owner }}-${{ github.event.repository.name }}
           stage: 'build'
           writePolicyEvaluationJson: 'policy-eval-results.json'
