--- a/.github/workflows/node-sonatype-lifecycle.yaml
+++ b/.github/workflows/node-sonatype-lifecycle.yaml
@@ -41,25 +41,52 @@ jobs:
         uses: actions/checkout@v4
 
       - name: "Build Node.js project"
-        uses: ModeSevenIndustrialSolutions/portal-ng-ui/.github/actions/node-build-action@master
+        # yamllint disable-line rule:line-length
+        uses: lfit/releng-reusable-workflows/tree/main/.github/actions/node-build-action@5db64208d04fdb0558e8a3a1a1a762b88ffd483e # Initial version
         with:
           node-version: ${{ inputs.node-version }}
           build-tool: ${{ inputs.build-tool }}
 
-      - name: "Sonatype Lifecycle Scan"
+#       - name: "Sonatype Lifecycle Scan"
         # Note: Somebody has set continue-on-error in the RelEng Reusable Workflows Repository
         # See: https://github.com/lfit/releng-reusable-workflows/blob/main/.github/workflows/composed-gradle-nexus-iq.yaml
         # See: https://github.com/lfit/releng-reusable-workflows/blob/main/.github/workflows/composed-maven-nexus-iq.yaml
-        uses: ModeSevenIndustrialSolutions/portal-ng-ui/.github/actions/iq-github-action@master
+#         uses: ModeSevenIndustrialSolutions/portal-ng-ui/.github/actions/iq-github-action@master
+#         with:
+#           serverUrl: ${{ vars.NEXUS_IQ_SERVER }}
+#           username: ${{ vars.NEXUS_IQ_USERNAME }}
+#           password: ${{ secrets.NEXUS_IQ_PASSWORD }}
+          # Temporarily force to ONAP ORG because currently testing in ModeSevenIndustrialSolutions
+#           applicationId: onap-${{ github.event.repository.name }}
+          # Restore the line below when ready to merge back into production repository
+          # applicationId: ${{ github.repository_owner }}-${{ github.event.repository.name }}
+#           stage: 'build'
+#           writePolicyEvaluationJson: 'policy-eval-results.json'
+          # target: ''
+
+
+      # New action for Sonatype Lifecycle action: https://github.com/sonatype/actions/tree/main/run-iq-cli
+      - name: Setup Sonatype CLI
+        uses: sonatype/actions/setup-iq-cli@v1
         with:
-          serverUrl: ${{ vars.NEXUS_IQ_SERVER }}
-          username: ${{ vars.NEXUS_IQ_USERNAME }}
+          iq-cli-version: 1.179.0-01
+
+      # Sonatype CLI requires Java to run
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'temurin'
+          java-version: '17'
+
+      # Run Sonatype CLI
+      - name: Run Sonatype CLI
+        uses: sonatype/actions/run-iq-cli@v1
+        with:
+          iq-server-url: $${{ var.NEXUS_IQ_SERVER }}
+          username: ${{ var.NEXUS_IQ_USERNAME }}
           password: ${{ secrets.NEXUS_IQ_PASSWORD }}
           # Temporarily force to ONAP ORG because currently testing in ModeSevenIndustrialSolutions
           applicationId: onap-${{ github.event.repository.name }}
           # Restore the line below when ready to merge back into production repository
           # applicationId: ${{ github.repository_owner }}-${{ github.event.repository.name }}
-          stage: 'build'
-          writePolicyEvaluationJson: 'policy-eval-results.json'
-          # target: ''
-          # debug: true
+          scan-targets: ''
