--- a/.github/actions/sonatype-lifecycle/action.yaml
+++ b/.github/actions/sonatype-lifecycle/action.yaml
@@ -14,7 +14,7 @@ inputs:
     description: 'Username for Nexus IQ server'
     required: true
   PASSWORD:
-    description: 'PAssword for Nexus IQ server'
+    description: 'Password for Nexus IQ server'
     required: true
   # NOT Mandatory
   SCAN-TARGETS:
@@ -49,7 +49,7 @@ runs:
 
     # Sonatype CLI requires Java to run
     - name: Set up JDK 17
-      uses: actions/setup-java@v3
+      uses: actions/setup-java@v4
       with:
         distribution: 'temurin'
         java-version: ${{ inputs.JAVA-VERSION }}
