Chore: Test new gerrit-verify.yaml workflow
Issue-ID: SECCOM-276
Change-Id: I22350a895fa6bb6216a411a6a925b8a9787ed187
Signed-off-by: Matthew Watkins <mwatkins@linuxfoundation.org>

--- a/.github/workflows/gerrit-verify.yaml
+++ b/.github/workflows/gerrit-verify.yaml
@@ -66,8 +66,8 @@ jobs:
         run: sleep 10s
 
   # This is a test workflow, not production, and will be replaced
-  # Trivial change will trigger a verify run
   node-sonartype-lifecycle:
+    needs: [notify]
     # yamllint disable-line rule:line-length
     uses: ModeSevenIndustrialSolutions/portal-ng-ui/.github/workflows/node-sonatype-lifecycle.yaml@master
     with:
