--- a/.github/workflows/gerrit-verify.yaml
+++ b/.github/workflows/gerrit-verify.yaml
@@ -65,24 +65,20 @@ jobs:
       - name: Allow replication
         run: sleep 10s
 
-  build-nodejs:
+  # This is a test workflow, not production, and will be replaced
+  node-sonartype-lifecycle:
     needs: [notify]
-    runs-on: ubuntu-latest
-    steps:
-      - name: "Build Node.js project"
-        # yamllint disable-line rule:line-length
-        uses: lfit/releng-reusable-workflows/.github/actions/node-build-action@5db64208d04fdb0558e8a3a1a1a762b88ffd483e # Initial release
-
-  sonartype-lifecycle:
-    needs: [notify, build-nodejs]
     # yamllint disable-line rule:line-length
-    uses: modeseven-onap/portal-ng-ui/.github/workflows/sonatype-lifecycle.yaml@master
+    uses: ModeSevenIndustrialSolutions/portal-ng-ui/.github/workflows/node-sonatype-lifecycle.yaml@master
+    with:
+      node-version: 20
+      build-tool: npm
     secrets:
       NEXUS_IQ_PASSWORD: ${{ secrets.NEXUS_IQ_PASSWORD }}
 
   report-status:
     if: ${{ always() }}
-    needs: [notify, build-nodejs, sonartype-lifecycle]
+    needs: [notify, node-sonartype-lifecycle]
     runs-on: ubuntu-latest
     steps:
       - name: Get workflow conclusion
