--- a/.github/workflows/gerrit-merge.yaml
+++ b/.github/workflows/gerrit-merge.yaml
@@ -6,45 +6,41 @@ on:
   workflow_dispatch:
     inputs:
       GERRIT_BRANCH:
-        description: "Branch that change is against"
+        description: 'Branch that change is against'
         required: true
         type: string
       GERRIT_CHANGE_ID:
-        description: "The ID for the change"
+        description: 'The ID for the change'
         required: true
         type: string
       GERRIT_CHANGE_NUMBER:
-        description: "The Gerrit number"
+        description: 'The Gerrit number'
         required: true
         type: string
       GERRIT_CHANGE_URL:
-        description: "URL to the change"
+        description: 'URL to the change'
         required: true
         type: string
       GERRIT_EVENT_TYPE:
-        description: "Type of Gerrit event"
+        description: 'Type of Gerrit event'
         required: true
         type: string
       GERRIT_PATCHSET_NUMBER:
-        description: "The patch number for the change"
+        description: 'The patch number for the change'
         required: true
         type: string
       GERRIT_PATCHSET_REVISION:
-        description: "The revision sha"
+        description: 'The revision sha'
         required: true
         type: string
       GERRIT_PROJECT:
-        description: "Project in Gerrit"
+        description: 'Project in Gerrit'
         required: true
         type: string
       GERRIT_REFSPEC:
-        description: "Gerrit refspec of change"
+        description: 'Gerrit refspec of change'
         required: true
         type: string
-    secrets:
-      SONAR_TOKEN:
-        description: "Sonar Cloud access token"
-        required: true
 
 concurrency:
   # yamllint disable-line rule:line-length
@@ -57,7 +53,7 @@ jobs:
     steps:
       - name: Notify job start
         # yamllint disable-line rule:line-length
-        uses: lfit/gerrit-review-action@9627b9a144f2a2cad70707ddfae87c87dce60729  # v0.8
+        uses: lfit/gerrit-review-action@9627b9a144f2a2cad70707ddfae87c87dce60729 # v0.8
         with:
           host: ${{ vars.GERRIT_SERVER }}
           username: ${{ vars.GERRIT_SSH_USER }}
@@ -72,7 +68,7 @@ jobs:
   call-prescan-sonarcloud:
     needs: notify
     # yamllint disable-line rule:line-length
-    uses: lfit/releng-reusable-workflows/.github/workflows/composed-generic-sonar-cloud.yaml@main
+    uses: lfit/releng-reusable-workflows/.github/workflows/composed-generic-sonar-cloud.yaml@e559e85bfc17ce024eabfa796d39ac27f806ec65 # 2024-07-19
     with:
       GERRIT_BRANCH: ${{ inputs.GERRIT_BRANCH }}
       GERRIT_CHANGE_ID: ${{ inputs.GERRIT_CHANGE_ID }}
@@ -83,9 +79,9 @@ jobs:
       GERRIT_PATCHSET_REVISION: ${{ inputs.GERRIT_PATCHSET_REVISION }}
       GERRIT_PROJECT: ${{ inputs.GERRIT_PROJECT }}
       GERRIT_REFSPEC: ${{ inputs.GERRIT_REFSPEC }}
-      JDK_VERSION: "17"
-      ENV_VARS: "{}"
-      ENV_SECRETS: "{}"
+      JDK_VERSION: '17'
+      ENV_VARS: '{}'
+      ENV_SECRETS: '{}'
       SONAR_ARGS: >
         -Dsonar.organization=onap
         -Dsonar.projectKey=onap_portal-ng-ui
@@ -95,18 +91,25 @@ jobs:
         -Dsonar.go.coverage.reportPaths=**/coverage.txt
         -Dsonar.verbose=true
     secrets:
-       SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+      SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+
+  call-sonatype-lifecycle:
+    needs: [notify]
+    # yamllint disable-line rule:line-length
+    uses: lfit/releng-reusable-workflows/.github/workflows/reuse-sonatype-lifecycle.yaml@98e376a377e4622da10ce286a618343c733e41c2 # 2024-10-24
+    secrets:
+      NEXUS_IQ_PASSWORD: ${{ secrets.NEXUS_IQ_PASSWORD }}
 
   report-status:
     if: ${{ always() }}
-    needs: [notify, call-prescan-sonarcloud]
+    needs: [notify, call-prescan-sonarcloud, call-sonatype-lifecycle]
     runs-on: ubuntu-latest
     steps:
       - name: Get workflow conclusion
         uses: technote-space/workflow-conclusion-action@v3
       - name: Report workflow conclusion
         # yamllint disable-line rule:line-length
-        uses: lfit/gerrit-review-action@9627b9a144f2a2cad70707ddfae87c87dce60729  # v0.8
+        uses: lfit/gerrit-review-action@9627b9a144f2a2cad70707ddfae87c87dce60729 # v0.8
         with:
           host: ${{ vars.GERRIT_SERVER }}
           username: ${{ vars.GERRIT_SSH_USER }}
