--- a/.github/workflows/gerrit-verify.yaml
+++ b/.github/workflows/gerrit-verify.yaml
@@ -65,20 +65,17 @@ jobs:
       - name: Allow replication
         run: sleep 10s
 
-  # This is a test workflow, not production, and will be replaced
-  node-sonartype-lifecycle:
+  build-nodejs:
     needs: [notify]
-    # yamllint disable-line rule:line-length
-    uses: ModeSevenIndustrialSolutions/portal-ng-ui/.github/workflows/node-sonatype-lifecycle.yaml@master
-    with:
-      node-version: 20
-      build-tool: npm
-    secrets:
-      NEXUS_IQ_PASSWORD: ${{ secrets.NEXUS_IQ_PASSWORD }}
+    runs-on: ubuntu-latest
+    steps:
+      - name: 'Build Node.js project'
+        # yamllint disable-line rule:line-length
+        uses: lfit/releng-reusable-workflows/.github/actions/node-build-action@5db64208d04fdb0558e8a3a1a1a762b88ffd483e # 2024-09-24
 
   report-status:
     if: ${{ always() }}
-    needs: [notify, node-sonartype-lifecycle]
+    needs: [notify, build-nodejs]
     runs-on: ubuntu-latest
     steps:
       - name: Get workflow conclusion
