--- a/package.json
+++ b/package.json
@@ -21,37 +21,37 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "16.2.12",
-    "@angular/cdk": "16.2.14",
-    "@angular/common": "16.2.12",
-    "@angular/compiler": "16.2.12",
-    "@angular/core": "16.2.12",
-    "@angular/forms": "16.2.12",
-    "@angular/localize": "16.2.12",
-    "@angular/platform-browser": "16.2.12",
-    "@angular/platform-browser-dynamic": "16.2.12",
-    "@angular/router": "16.2.12",
-    "@ng-bootstrap/ng-bootstrap": "15.1.2",
-    "@ngx-translate/core": "14.0.0",
-    "@ngx-translate/http-loader": "7.0.0",
+    "@angular/animations": "17.3.12",
+    "@angular/cdk": "17.3.10",
+    "@angular/common": "17.3.12",
+    "@angular/compiler": "17.3.12",
+    "@angular/core": "17.3.12",
+    "@angular/forms": "17.3.12",
+    "@angular/localize": "17.3.12",
+    "@angular/platform-browser": "17.3.12",
+    "@angular/platform-browser-dynamic": "17.3.12",
+    "@angular/router": "17.3.12",
+    "@ng-bootstrap/ng-bootstrap": "^16.0.0",
+    "@ngx-translate/core": "^16.0.4",
+    "@ngx-translate/http-loader": "^16.0.1",
     "@popperjs/core": "^2.11.6",
-    "angular-oauth2-oidc": "^16.0.0",
+    "angular-oauth2-oidc": "^17.0.2",
     "bootstrap": "5.2.3",
     "license-report": "5.0.2",
     "lodash": "4.17.21",
     "rxjs": "~7.4.0",
     "tslib": "2.3.0",
-    "zone.js": "0.13.3"
+    "zone.js": "0.14.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "16.2.16",
-    "@angular-eslint/builder": "16.3.1",
-    "@angular-eslint/eslint-plugin": "16.3.1",
-    "@angular-eslint/eslint-plugin-template": "16.3.1",
-    "@angular-eslint/schematics": "16.3.1",
-    "@angular-eslint/template-parser": "16.3.1",
-    "@angular/cli": "16.2.16",
-    "@angular/compiler-cli": "16.2.12",
+    "@angular-devkit/build-angular": "17.3.11",
+    "@angular-eslint/builder": "17.3.0",
+    "@angular-eslint/eslint-plugin": "17.3.0",
+    "@angular-eslint/eslint-plugin-template": "17.3.0",
+    "@angular-eslint/schematics": "17.3.0",
+    "@angular-eslint/template-parser": "17.3.0",
+    "@angular/cli": "17.3.11",
+    "@angular/compiler-cli": "17.3.12",
     "@openapitools/openapi-generator-cli": "^2.6.0",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "2.0.3",
@@ -81,7 +81,7 @@
     "protractor": "7.0.0",
     "sonar-scanner": "3.1.0",
     "ts-node": "10.9.0",
-    "typescript": "~4.9.3"
+    "typescript": "^5.3.3"
   },
   "husky": {
     "hooks": {
