--- a/.github/workflows/github2gerrit.yaml
+++ b/.github/workflows/github2gerrit.yaml
@@ -19,15 +19,21 @@ concurrency:
     cancel-in-progress: true
 
 jobs:
-    call-in-g2g-workflow:
-        permissions:
-            contents: read
-            pull-requests: write
-        uses: lfit/github2gerrit/.github/workflows/github2gerrit.yaml@main
-        with:
-            GERRIT_KNOWN_HOSTS: ${{ vars.GERRIT_KNOWN_HOSTS }}
-            GERRIT_SSH_USER_G2G: ${{ vars.GERRIT_SSH_USER_G2G }}
-            GERRIT_SSH_USER_G2G_EMAIL: ${{ vars.GERRIT_SSH_USER_G2G_EMAIL }}
-            ORGANIZATION: ${{ vars.ORGANIZATION }}
-        secrets:
-            GERRIT_SSH_PRIVKEY_G2G: ${{ secrets.GERRIT_SSH_PRIVKEY_G2G }}
+  issue-id:
+    permissions:
+      contents: write
+    uses: os-climate/osc-github-devops/.github/workflows/reuse-issue-id.yaml@main
+
+  call-in-g2g-workflow:
+    needs: issue-id
+    permissions:
+      contents: read
+      pull-requests: write
+    uses: lfit/github2gerrit/.github/workflows/github2gerrit.yaml@main
+    with:
+      GERRIT_KNOWN_HOSTS: ${{ vars.GERRIT_KNOWN_HOSTS }}
+      GERRIT_SSH_USER_G2G: ${{ vars.GERRIT_SSH_USER_G2G }}
+      GERRIT_SSH_USER_G2G_EMAIL: ${{ vars.GERRIT_SSH_USER_G2G_EMAIL }}
+      ORGANIZATION: ${{ vars.ORGANIZATION }}
+    secrets:
+      GERRIT_SSH_PRIVKEY_G2G: ${{ secrets.GERRIT_SSH_PRIVKEY_G2G }}
