--- a/.github/workflows/gerrit-verify.yaml
+++ b/.github/workflows/gerrit-verify.yaml
@@ -72,7 +72,9 @@ jobs:
       - uses: lfit/checkout-gerrit-change-action@54d751e8bd167bc91f7d665dabe33fae87aaaa63 # v0.9
       - name: "Build Node.js project"
         # yamllint disable-line rule:line-length
-        uses: lfit/releng-reusable-workflows/.github/actions/node-build-action@5db64208d04fdb0558e8a3a1a1a762b88ffd483e # 2024-09-24
+        uses: lfit/releng-reusable-workflows/.github/actions/node-build-action@20a734c5cb971732cfa02de982d335a79ce71261 # 2025-04-03
+        with:
+          NPM_FLAGS: ""
 
   report-status:
     if: ${{ always() }}
