Add playwright e2e tests
- define playwright tests in e2e folder
- remove protractor
- add e2e/compose folder that contains docker-compose.yaml [0]
- add e2e/wiremock folder that contains wiremock stubs

[0] The compose file contains keycloak and a keycloak-config-cli to import
    an onap realm with the portal-app client.
    It will also spin up the wiremock that is defined in e2e/wiremock

Issue-ID: PORTALNG-159
Change-Id: I5f85fb29ec4840ba053fc3a4b2a6828e1f8572f0
Signed-off-by: Fiete Ostkamp <fiete.ostkamp@telekom.de>

--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,11 @@ Thumbs.db
 
 staging.proxy.config.json
 .nx
+
+# Playwright
+node_modules/
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
+/playwright/.auth/
