--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "frontend",
   "version": "0.0.0",
   "scripts": {
-    "openapi": "npx openapi-generator-cli generate --generator-key v3.0",
+    "openapi": "npx openapi-generator-cli generate --generator-key v3.0 > /dev/null",
     "ng": "./node-modules/.bin/ng",
     "prestart": "npm run openapi",
-    "start": "ng serve --proxy-config staging.proxy.config.json --host 0.0.0.0 --port 80 --disable-host-check",
+    "prestart:e2e": "./e2e/compose/compose.sh && npm run openapi",
+    "start": "ng serve --host 0.0.0.0 --port 4200 --disable-host-check --proxy-config staging.proxy.config.json",
+    "start:e2e": "ng serve --host 0.0.0.0 --port 4200 --disable-host-check --proxy-config e2e.proxy.config.json",
     "prebuild": "npm run openapi",
     "build": "ng build",
     "pretest": "npm run openapi",
@@ -13,9 +15,9 @@
     "prelint": "npm run openapi",
     "lint": "ng lint",
     "pree2e": "npm run openapi",
-    "e2e": "ng e2e",
-    "compodoc": "compodoc -p tsconfig.json",
-    "compodoc-4200": "compodoc -p tsconfig.json -s -r 4200",
+    "e2e": "npx playwright test --project=firefox",
+    "e2e:trace": "npx playwright test --project=firefox --trace on",
+    "e2e:ui": "npx playwright test --project=firefox --ui",
     "sonar": "sonar-scanner",
     "licences": "license-report --output=html > ./portal_ui_licences.html --config ./license-report-config.json"
   },
@@ -53,6 +55,7 @@
     "@angular/cli": "17.3.11",
     "@angular/compiler-cli": "17.3.12",
     "@openapitools/openapi-generator-cli": "^2.6.0",
+    "@playwright/test": "^1.56.1",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "2.0.3",
     "@types/lodash": "4.14.188",
@@ -77,6 +80,7 @@
     "license-check-and-add": "4.0.5",
     "license-checker": "25.0.1",
     "lint-staged": "12.4.1",
+    "playwright-ng-schematics": "^1.2.2",
     "prettier": "2.6.2",
     "protractor": "7.0.0",
     "sonar-scanner": "3.1.0",
